Fix: Status closed unreadable

--- a/web/_sass/_chaospott.scss
+++ b/web/_sass/_chaospott.scss
@@ -107,11 +107,11 @@ ul.nav>li>a {
 }
 
 #status_open a {
-  color: #29A900 !important;
+  color: #fff !important;
 }
 
 #status_closed a {
-  color: #D9534F !important;
+  color: #fff !important;
 }
 
 #status_bar {
